# RustySparseMMX

./: .gitignore  Cargo.toml  README.md  read_sparse_inR.txt
src/: lib.rs  main.rs  sparsedata.rs
testData/: .gitignore  DenseMatrix.csv  Rtest.R  Rtest_transp.R  quants_mat.mtx  quants_mat_cols.txt  quants_mat_rows.txt
testData/chimera/: .gitignore  Rtest.R  cell.csv  cell2.csv
