[package]
name = "dense2sparse"
version = "0.1.0"
edition = "2021"

[lib]
name = "sparsedata"
path = "src/lib.rs"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
flate2 = "1.0.25"
regex =  "1.7.1"
